<resources>
    <string name="app_name">BitVault App Store</string>
    <string name="action_settings">Settings</string>
    <string name="string_please_check_internet">Please check internet connection</string>
    <string name="string_drawer_close">Drawer close</string>
    <string name="string_drawer_open">Drawer Open</string>
    <string name="string_three_dot">&#8942;</string>
    <string name="search_hint">Search</string>
    <string name="whats_new">what\'s new</string>
    <string name="reply_from">Reply from</string>
    <string name="on">on</string>
    <string name="recently_updated">Recently updated</string>
    <string name="up_to_date">Up to date</string>
    <string name="all_apps">All apps</string>
    <string name="apps">apps</string>
    <string name="installed">installed</string>
    <string name="my_apps">My apps</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact us</string>
    <string name="request_callback">Request callback</string>
    <string name="mon_fri">8:00 AM to 8:00 PM  (Monday - Friday)</string>
    <string name="sat_sun">9:00 AM to 5:00 PM (Saturday - Sunday)</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_text">Send comments and suggestion at any time</string>
    <string name="general">General</string>
    <string name="auto_update_apps">Auto-update apps</string>
    <string name="auto_update_app_over_wifi_only">Auto-update apps over Wi-Fi only</string>
    <string name="clear_local_search_history">Clear local search history</string>
    <string name="remove_searches_that_you_have_perform_from_this_device">Remove searches that you have performed from this device</string>
    <string name="add_icon_to_home_screen">Add icon to Home screen</string>
    <string name="for_new_apps">For new apps</string>
    <string name="notifications">Notifications</string>
    <string name="app_updates_available">App updates available</string>
    <string name="notify_when_app_updates_are_available">Notify when app updates are available</string>
    <string name="apps_were_auto_updated">Apps were auto-updated</string>
    <string name="notify_when_apps_are_automatically_updated">Notify when apps are automatically updated</string>
    <string name="category">category</string>
    <string name="application">application</string>
    <string name="page">page</string>
    <string name="size">size</string>
    <string name="open">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="install">Install</string>
    <string name="installing...">Installing…</string>
    <string name="installing">Installing</string>
    <string name="uninstalling">Uninstalling…</string>
    <string name="read_more">Read More</string>
    <string name="all_reviews">All Reviews</string>
    <string name="rate_app">Rate this app</string>
    <string name="write_review">Write a short review</string>
    <string name="tell_us">Tell us what you think</string>
    <string name="submit">Submit</string>
    <string name="rate_on">Rated on %1$s</string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="downloading">Downloading…</string>
    <string name="accept">Accept</string>
    <string name="similar_app">Similar apps</string>
    <string name="version_access">Version %1$s can access</string>
    <string name="need_access">needs access to</string>
    <string name="date_formate">dd/MM/yyyy</string>
    <string name="app_is_system_app">It is system app and will not be open.</string>
    <string name="no_app">No app available</string>
    <string name="more">More</string>
    <string name="free">Free</string>
    <string name="developer">Developer</string>
    <string name="downloads">Downloads</string>
    <string name="social">Social</string>
    <string name="similar">Similar</string>
    <string name="visit_page">Visit webpage</string>
    <string name="send_email">Send email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="permission_detail">Permission details</string>
    <string name="web_url">http://google.com</string>
    <string name="privacy_url">http://facebook.com</string>
    <string name="header_title">header_title</string>
    <string name="category_id">category_id</string>
    <string name="categoryIdList">categoryIdList</string>
    <string name="search_query">search_query</string>
    <string name="package_name">package_name</string>
    <string name="install_web_browser_txt">No application can handle this request. Please install a webbrowser</string>
    <string name="email_client_txt">There is no email client installed.</string>
    <string name="mail_to">someone@gmail.com</string>
    <string name="mail_to_cc">xyz@gmail.com</string>
    <string name="mail_to_txt">mailto:</string>
    <string name="mail_type">text/plain</string>
    <string name="gm">.gm</string>
    <string name="gmail">gmail</string>
    <string name="app_not_available">App Not Available</string>
    <string name="get">GET</string>
    <string name="appId">appId</string>
    <string name="one">36</string>
    <string name="publicAdd">publicAdd</string>
    <string name="anuj">anuj</string>
    <string name="apk_package_name">com.mycompany.mygame</string>
    <string name="banner">BANNER</string>
    <string name="applicationId">applicationId</string>
    <string name="action">action</string>
    <string name="Install">install</string>
    <string name="download">download</string>
    <string name="Uninstall">Uninstall</string>
    <string name="average_rating">average_rating</string>
    <string name="star_object">star_object</string>
    <string name="app_detail">app detail</string>
    <string name="updated_on">Updated On</string>
    <string name="download_size">Download size</string>
    <string name="intent_url">URL</string>
    <string name="intent_app">APP_NAME</string>
    <string name="intent_pos">POS</string>
    <string name="android_phone">com.android.phone</string>
    <string name="networking_setting">com.android.phone.Setting</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection_string">No Internet connection. Make sure that Wi-Fi or cellular mobile data is turned on, then try again.</string>
    <string name="cross_img">e</string>
    <string name="user_img">x</string>
    <string name="similar_img">w</string>
    <string name="back_img">q</string>
    <string name="menu_icon">h</string>
    <string name="web_img">s</string>
    <string name="email_img">t</string>
    <string name="privacy_img">u</string>
    <string name="dot_img">B</string>
    <string name="permission_img">v</string>
    <string name="rating_five">5</string>
    <string name="search_icon">k</string>
    <string name="store_icon">D</string>
    <string name="send_icon">E</string>
    <string name="currency_icon">$</string>
    <string name="font_roboto_light">font/Roboto-Light.ttf</string>
    <string name="font_roboto_medium">font/Roboto-Medium.ttf</string>
    <string name="font_roboto_regular">font/Roboto-Regular.ttf</string>
    <string name="apk_name">.apk</string>
    <string name="bvk_name">.bvk</string>
    <string name="http_response_code">http response code is</string>
    <string name="package_type">application/vnd.android.package-archive</string>
    <string name="fileNot_found_exception">FileNotFoundException!</string>
    <string name="exception">Exception</string>
    <string name="banner_list">banner_list</string>
    <string name="bundle">bundle</string>
    <string name="current_item_position">current_item_position</string>
    <string name="timeout_error">com.android.volley.TimeoutError</string>
    <string name="internet_error_type">internet_error_type</string>
    <string name="timeout_error_msg">Connection timed out.</string>
    <string name="FREE">FREE</string>
    <string name="wifi_connected">Wifi connected</string>
    <string name="wifi_disconnected">Wifi Disconnect</string>
    <string name="apk_download_url">apkDownloadUrl</string>
    <string name="text_permisson_refused">Permission refused</string>
    <string name="download_file_list">download_file_list</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="source">source</string>
    <string name="crash_toast_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data</string>
    <string name="crash_ok_toast">Thank you !</string>
    <string name="status">status</string>
    <string name="success">success</string>
    <string name="enqueueNo">enqueueNo</string>
    <string name="auth_failure_msg">Cannot connect to Internet...Please check your connection!</string>
    <string name="download_pending">download pending...</string>
    <string name="waiting_for_network">Waiting for Network...</string>
    <string name="destination_screen">destination screen</string>
    <string name="installing_package">installing package</string>
    <string name="appReview">appReview</string>
    <string name="appRating">appRating</string>
    <string name="result">result</string>
    <string name="appIds">appIds</string>
    <string name="packageNames">packageNames</string>
    <string name="updates_pending">Updates pending</string>
    <string name="no_updates_available">No updates available</string>
    <string name="updates">Updates</string>
    <string name="updated">Updated</string>
    <string name="days">days</string>
    <string name="ago">ago</string>
    <string name="yesterday">yesterday</string>
    <string name="hr">hr.</string>
    <string name="min">min</string>
    <string name="publicAddress">publicAddress</string>
    <string name="no_app_text">There is no apps in App Store</string>
    <string name="no_connection_error">com.android.volley.NoConnectionError</string>
    <string name="app_description">app_description</string>
    <string name="na">N/A</string>
    <string name="html_bullet">&#8226;</string>
    <string name="week">wk.</string>
    <string name="used">Used</string>
    <string name="file_name">temp</string>
    <string name="package_colon">package:</string>
    <string name="successfully_installed">Successfully installed.</string>
    <string name="uninstall_app_id">uninstall app Id</string>
    <string name="blank_space" />
    <string name="hundred">Hundred</string>
    <string name="thousand">Thousand</string>
    <string name="million">Million</string>
    <string name="billion">Billion</string>
    <string name="setIconAtHomeScreen">setIconAtHomeScreen</string>
    <string name="packageName">packageName</string>
    <string name="packageNameList">packageNameList</string>
    <string name="dpk_name">.dpk</string>
    <string name="search_bar_keywords">search_bar_keywords</string>
    <string name="string_separator"><![CDATA[,.,.,&]]></string>
    <string name="appRateReviewId">appRateReviewId</string>
    <string name="app_type">app type</string>
    <string name="orderBy">orderBy</string>
    <string name="updatedAt">updatedAt</string>
    <string name="appTypeId">appTypeId</string>
    <string name="cards">Cradit or Debit cards</string>
    <string name="paypal_button">Paypal</string>
    <string name="nonce">Nonce</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="Feedback">Feedback</string>
    <string name="feedback">feedback</string>
    <string name="loading">Loading…</string>
    <string name="bt_card_not_accepted">Card not accepted</string>
    <string name="empty"></string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="sandbox">Sandbox</string>
    <string name="about">About</string>
    <string name="app_store_version_text">App Store version</string>
</resources>