<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/id_frame_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <com.bitvault.appstore.custom.FontTextView
                android:id="@+id/id_tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen5"
                android:background="?attr/selectableItemBackground"
                android:onClick="onCancelClicked"
                android:padding="@dimen/dimen10"
                android:text="@string/cross_img"
                android:textColor="@color/color_white"
                android:textSize="@dimen/dimen22"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_tv_title"
                style="@style/HeaderTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/help"
                android:textColor="@color/color_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5"
            android:background="@color/color_white"
            android:orientation="vertical"
            android:padding="@dimen/dimen15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/color_black" />

            <LinearLayout
                android:id="@+id/id_ll_request_callback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:orientation="horizontal">

                <com.bitvault.appstore.custom.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="g"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text25" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_callback"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/dimen17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mon_fri"
                        android:textColor="@color/color_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sat_sun"
                        android:textColor="@color/color_black" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ll_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:orientation="horizontal">

                <com.bitvault.appstore.custom.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="f"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text25" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_feedback"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/dimen17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_text"
                        android:textColor="@color/color_black" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

        <FrameLayout
            android:id="@+id/id_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </FrameLayout>

    </FrameLayout>

</layout>